# SentinelEdge

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  OPERATIONS.md  README.md  SentinelEdge_Architecture.md  TESTING.md  build_ebpf.sh  config.toml  demo_realistic_data.py  docker-compose.yml  eBPF_Rust_Security_Engine_Spec.md  run_real_tests.sh  run_realistic_tests.sh  simple_ebpf_test.rs  verify_real_events.sh
.github/workflows/: ci.yml
examples/: demo_attacks.sh
examples/config_examples/: config_example.toml  enterprise.toml  production.toml
kernel-agent/: Cargo.toml  direct_test.sh  real_test.sh  run_as_root.sh  test_performance.sh
kernel-agent/examples/: live_monitor_demo.rs  performance_demo.rs  real_ebpf_demo.rs  system_stress_test.rs
kernel-agent/src/: advanced_network_hooks.bpf.c  advanced_packet_inspector.bpf.c  config_validation.rs  error.rs  events.rs  integration_tests.rs  kernel_structures.bpf.c  lib.rs  memory_analyzer.bpf.c  observability.rs  observability_simple.rs  real_ebpf_tests.rs  real_integration_tests.rs  safe_parser.rs  sentinel.bpf.c  syscall_modifier.bpf.c  tests.rs
test/: Cargo.toml  DEBUG_GUIDE.md  README.md  README_PRODUCTION_DEBUG.md  build_matching_vmlinux.sh  build_vmlinux.sh  debug_simple.bpf.c  production_debug_guide.md  production_kernel_debug.md  quick_env_check.sh  quick_symbol_check.sh  setup_kernel_debug.sh  setup_kgdb.sh  simple.bpf.c
test/src/: debug_main.rs  main.rs
user-agent/: Cargo.toml
user-agent/src/: config.rs  ebpf_loader.rs  event_parser.rs  main.rs  response.rs  rule_engine.rs  threat_classifier.rs
