[workspace]
resolver = "2"
members = [
    "kernel-agent",
    "user-agent"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
libbpf-rs = "0.23"

# Performance optimization
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Development configuration
[profile.dev]
opt-level = 0
debug = true
incremental = true 