[package]
name = "user-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-edge"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for AI API calls)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration and file operations
config = "0.13"

# Random number generation
rand = "0.8"
fastrand = "2.0"

# Memory mapping and system interface
nix = "0.27"

# Async concurrency primitives
futures = "0.3"
async-trait = "0.1"

# Local workspace dependencies
kernel-agent = { path = "../kernel-agent" }

# String processing
regex = "1.0"

# Data structures
indexmap = "2.0"

# System monitoring
sysinfo = "0.29"

# Linux-specific (conditional compilation)
[target.'cfg(target_os = "linux")'.dependencies]
libbpf-rs = "0.21"
libbpf-sys = "1.2"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5" 